--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,11 @@ body {
   text-align: start;
 }
 
+.container {
+background-color: gray;
+color: black;
+}
+
 input[type="date"] {
     padding: 8px;
     border-radius: 6px;
