modified:   css/EditParcel.css 	modified:   pages/EditParcel.php

--- a/css/EditParcel.css
+++ b/css/EditParcel.css
@@ -9,7 +9,7 @@
   font-family: "Roboto-Black", sans-serif;
   font-size: 2.2rem; /* responsive font size */
   font-weight: 700;  /* 'Black' implies bold */
-  margin: 0 auto 0 auto;
+  margin:  auto 0 auto;
   text-align: center;
 }
 
