--- a/css/EditParcel.css
+++ b/css/EditParcel.css
@@ -9,7 +9,7 @@
   font-family: "Roboto-Black", sans-serif;
   font-size: 2.2rem; /* responsive font size */
   font-weight: 700;  /* 'Black' implies bold */
-  margin:  auto 0 auto;
+  margin: 25px auto 0 auto;
   text-align: center;
 }
 
@@ -56,14 +56,15 @@
 
 .form-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(2, 1fr);
   gap: 20px;
 }
 
 .form-group {
-  display: flex;
+  color: white;
+    display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 20px;
 }
 
 input,
