--- a/css/EditParcel.css
+++ b/css/EditParcel.css
@@ -70,8 +70,10 @@
   width: 100%; /* Ensures consistency */
 }
 
-.old-owner{
+.old-owner:disabled {
   color: whitesmoke !important;
+  background-color: #151f42; /* optional: matches dark background */
+  opacity: 1; /* important to override dimmed look */
 }
 
 input,
